[gd_scene load_steps=11 format=4 uid="uid://bfp1sm614m8wf"]

[ext_resource type="Script" uid="uid://bbk6sd211vm0u" path="res://scenes/hud/ending_cutscene.gd" id="1_v0jh0"]
[ext_resource type="Texture2D" uid="uid://dl0kjes6pnh1t" path="res://assets/tiles/tileset.png" id="2_v0jh0"]
[ext_resource type="Texture2D" uid="uid://djnk56m3q8ngo" path="res://assets/backgrounds/lv1/livingroom.png" id="3_c7tfo"]
[ext_resource type="Texture2D" uid="uid://24hgtdhvrwrl" path="res://assets/hud/dialog.png" id="4_1xkkw"]
[ext_resource type="Texture2D" uid="uid://d22gdtuk54ixw" path="res://assets/chars/momma_bear/momma.png" id="5_ebuof"]
[ext_resource type="PackedScene" uid="uid://cnaw4xrujfib0" path="res://scenes/items/ball.tscn" id="6_813c6"]
[ext_resource type="PackedScene" uid="uid://2q1aa6ylpd8t" path="res://scenes/chars/bailey/bailey.tscn" id="6_l43k4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6p0i"]
texture = ExtResource("2_v0jh0")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, 0, 64, 1, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_pguv2"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_v6p0i")

[sub_resource type="LabelSettings" id="LabelSettings_v6p0i"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="EndingCutscene" type="CanvasLayer"]
script = ExtResource("1_v0jh0")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAQAAQADAAAAAAABAAQAAQADAAAAAAACAAQAAQADAAAAAAADAAQAAQADAAAAAAAEAAQAAQADAAAAAAAFAAQAAQADAAAAAAAGAAQAAQADAAAAAAAHAAQAAQADAAAAAAAIAAQAAQADAAAAAAA=")
tile_set = SubResource("TileSet_pguv2")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_c7tfo")
centered = false

[node name="Dialog" type="Sprite2D" parent="."]
visible = false
position = Vector2(643, 128)
scale = Vector2(0.534442, 0.181722)
texture = ExtResource("4_1xkkw")
flip_h = true

[node name="Momma" type="Sprite2D" parent="."]
position = Vector2(128, 414)
texture = ExtResource("5_ebuof")
flip_h = true

[node name="bailey" parent="." instance=ExtResource("6_l43k4")]
position = Vector2(468, 483)
script = null

[node name="AnimatedSprite2D" parent="bailey" index="0"]
animation = &"idle"
autoplay = "idle"
frame_progress = 0.198917
flip_h = true

[node name="Button" type="Button" parent="."]
offset_left = 985.0
offset_top = 529.0
offset_right = 1124.0
offset_bottom = 617.0
text = "Skip"

[node name="Label" type="Label" parent="."]
offset_left = 274.0
offset_top = 44.0
offset_right = 1103.0
offset_bottom = 182.0
label_settings = SubResource("LabelSettings_v6p0i")
autowrap_mode = 3

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Ball" parent="." instance=ExtResource("6_813c6")]
position = Vector2(231, 599)

[node name="Ball2" parent="." instance=ExtResource("6_813c6")]
position = Vector2(296, 602)

[node name="Ball3" parent="." instance=ExtResource("6_813c6")]
position = Vector2(267, 542)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_dialog_timer_timeout"]

[editable path="bailey"]
